fix spacing with explanation message as only child

--- a/src/assets/styles/_form.scss
+++ b/src/assets/styles/_form.scss
@@ -914,7 +914,9 @@ $form-contrast-background-focus: transparent !default;
     }
 
     @media (min-width: $global-viewport-medium) {
-      margin-right: $global-whitespace-small;
+      &:not(:only-child) {
+        margin-right: $global-whitespace-small;
+      }
     }
   }
 
